Fix root domain access with proper redirection to /devio path

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Devio | Solutions Digitales sur Mesure pour Votre Entreprise</title>
     <meta http-equiv="refresh" content="0;url=/devio/">
+    <script>window.location.href = "/devio/";</script>
     <style>
         body {
             font-family: 'Segoe UI', system-ui, sans-serif;
