--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Devio | Solutions Digitales sur Mesure pour Votre Entreprise</title>
-    <meta http-equiv="refresh" content="0;url=/devio/">
-    <script>window.location.href = "/devio/";</script>
+    <!-- Fixed redirect path with explicit domain -->
+    <meta http-equiv="refresh" content="0;url=https://onedevio.me/devio/">
+    <script>
+        // Hard-coded redirect to absolute path to prevent any path resolution issues
+        window.location.href = "https://onedevio.me/devio/";
+    </script>
     <style>
         body {
             font-family: 'Segoe UI', system-ui, sans-serif;
@@ -55,8 +59,8 @@
     <div class="container">
         <h1>Devio - Solutions Digitales sur Mesure</h1>
         <p>Vous allez être redirigé vers la page d'accueil...</p>
-        <a href="/devio/">Aller à la page d'accueil</a>
+        <a href="https://onedevio.me/devio/">Aller à la page d'accueil</a>
     </div>
-    <div class="version">v1.1.0 (Update test)</div>
+    <div class="version">v1.2.0 (Fixed redirect)</div>
 </body>
 </html> 
