--- a/public/index.html
+++ b/public/index.html
@@ -4,63 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Devio | Solutions Digitales sur Mesure pour Votre Entreprise</title>
-    <!-- Fixed redirect path with explicit domain -->
-    <meta http-equiv="refresh" content="0;url=https://onedevio.me/devio/">
-    <script>
-        // Hard-coded redirect to absolute path to prevent any path resolution issues
-        window.location.href = "https://onedevio.me/devio/";
-    </script>
-    <style>
-        body {
-            font-family: 'Segoe UI', system-ui, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f0f9ff;
-            color: #0f172a;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-        .container {
-            max-width: 600px;
-            padding: 20px;
-            border: 2px solid #064663;
-            border-radius: 8px;
-            background-color: white;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-            color: #064663;
-        }
-        a {
-            display: inline-block;
-            background-color: #064663;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 4px;
-            margin-top: 20px;
-            font-weight: bold;
-        }
-        .version {
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            font-size: 0.8rem;
-            color: #64748b;
-        }
-    </style>
+    <!-- This file will be overwritten by the Next.js build -->
 </head>
 <body>
-    <div class="container">
-        <h1>Devio - Solutions Digitales sur Mesure</h1>
-        <p>Vous allez être redirigé vers la page d'accueil...</p>
-        <a href="https://onedevio.me/devio/">Aller à la page d'accueil</a>
-    </div>
-    <div class="version">v1.2.0 (Fixed redirect)</div>
+    <!-- Placeholder content that will be replaced by the Next.js build -->
+    <div id="app-root"></div>
 </body>
 </html> 
